--- a/style/main.css
+++ b/style/main.css
@@ -117,11 +117,25 @@ li:hover a{
 .slider-element{
     position: absolute;
 }
+.slider-images{
+    width: 100%;
+    max-height: 88vh;
+}
 .slider-img{
     width: 100%;
+    transition: transform ease 1s;
 }
 .slider-img img{
     width: 100%;
+}
+.img-center{
+    transform: translateY(-100%);
+}
+.img-right{
+    transform: translateX(100%) translateY(-200%);
+}
+.img-left{
+    transform: translateX(-100%);
 }
 .slider-title{
     top: 20%;
