--- a/style/main.css
+++ b/style/main.css
@@ -120,6 +120,7 @@ li:hover a{
 .slider-images{
     width: 100%;
     max-height: 88vh;
+    position: relative;
 }
 .slider-img{
     width: 100%;
@@ -129,13 +130,18 @@ li:hover a{
     width: 100%;
 }
 .img-center{
-    transform: translateY(-100%);
 }
 .img-right{
-    transform: translateX(100%) translateY(-200%);
+    transform: translateX(100%);
+    position: absolute;
+    top:0;
+    left:0;
 }
 .img-left{
     transform: translateX(-100%);
+    position: absolute;
+    top:0;
+    left:0;
 }
 .slider-title{
     top: 20%;
