--- a/style/main.css
+++ b/style/main.css
@@ -242,6 +242,10 @@ li:hover a{
     max-width: 100%;
     max-height: 30em;
 }
+.model-3d model-viewer{
+    width: 20em;
+    height: 20em;
+}
 
 /*/// Footer ///*/
 
@@ -280,9 +284,8 @@ li:hover a{
     h1{
        font-size: 2em; 
     }
-    .logo svg{
-        height: 2em;
-        width: 2em;
+    .logo img{
+        width: 3.5em;
     }
     .menu li{
         font-size: 1em;
@@ -316,6 +319,10 @@ li:hover a{
     }
     .menu-burger svg path{
        fill: hsl(0, 0%, 100%);
+    }
+    .model-3d model-viewer{
+        width: 10em;
+        height: 10em;
     }
 }
 @media (max-width:480px){
